--- a/sponsors.html
+++ b/sponsors.html
@@ -15,7 +15,9 @@ layout: default
                         <p>A big thank you to or spounsours! NewDesingers is a great opportunity but it expensive, we are funding our way to the show using our own money and with help from the companies shown below.</p>
                     </div>
                     <div class="row">
-                        <div class="three columns"><a href=""><img src="images/33429037_10156397146176565_4810877045313634304_n.jpg" title="stablere sources"></a></div>
+                        <div class="twelve columns">
+                            <a class="sponsor" href="https://www.stableresources.com/"><img src="images/33429037_10156397146176565_4810877045313634304_n.jpg" title="stablere sources"></a>
+                        </div>
                     </div>
                 </div>
             </div>
