--- a/sponsors.html
+++ b/sponsors.html
@@ -12,7 +12,7 @@ layout: default
                 </div>
                 <div class="row">
                     <div class="nine columns">
-                        <p>A big thank you to or spounsours! NewDesingers is a great opportunity but it expensive, we are funding our way to the show using our own money and with help from the companies shown below.</p>
+                        <p><em>A big thank you to or spounsours!</em> NewDesingers is a great opportunity, but expensive, we are funding our way to the show using our own money and with help from the companies shown below.</p>
                     </div>
                     <div class="row">
                         <div class="twelve columns">
