--- a/sponsors.html
+++ b/sponsors.html
@@ -16,7 +16,7 @@ layout: default
                     </div>
                     <div class="row">
                         <div class="twelve columns">
-                            <a class="sponsor" href="https://www.stableresources.com/" target="_blank"><img src="images/33429037_10156397146176565_4810877045313634304_n.jpg" title="stablere sources"></a>
+                            <a class="sponsor" href="https://www.stableresources.com/" target="_blank"><img src="images/stableresources.png" title="stablere sources"></a>
                         </div>
                     </div>
                 </div>
