--- a/sponsors.html
+++ b/sponsors.html
@@ -12,7 +12,7 @@ layout: default
                 </div>
                 <div class="row">
                     <div class="nine columns">
-                        <p><strong>A big thank you to or spounsours!</strong> NewDesingers is a great opportunity, but expensive, we are funding our way to the show using our own money and with help from the companies shown below.</p>
+                        <p><strong>A big thank you to or sponsors!</strong> New Desingers is a great opportunity, but expensive, we are funding our way to the show using our own money and with help from the companies shown below.</p>
                     </div>
                     <div class="row">
                         <div class="twelve columns">
