--- a/about.html
+++ b/about.html
@@ -13,8 +13,10 @@ layout: default
                 <div class="row">
                     <div class="nine columns">
                         <h2>it's not easy being green?</h2>
-                        <p>With worries around climate change, a growing population and scarce resources it has become apparent that designers now, more than ever, need to consider the sustainable implications of their products. But what does it mean to be “green”? Earth domes, flip flops and vegetables immediately spring to mind. However for us, a collective of 3rd year Sustainable Product Design students, Sustainable or Green Design is about designing meaningful products that really consider the people they are intended for, as well as the social and environmental impact manufacturing the product may have.</p>
-                        <p>Our 2018 show at New Designers London will present our concepts for Sustainable Product Design. As Victor Papanek said “Design, if it is to be ecologically responsible and socially responsive, must be revolutionary and radical.” So follow us, and come see our revolutionary and radical designs at our end of year show.</p> 
+                        <p>'It's not easy being green' is an exhibition by 21 graduates from Sustainable Product Design that responds to the pertinent social, environmental and ethical issues affecting the world and society.</p>    
+                        <p>Amidst growing concerns of climate change, a growing population and scarce resources, the responsibility of the designer has become amplified. It has become apparent that the sustainable implications of a product must be considered.</p> 
+                        <p>But what does it mean to be “green”? Earth domes, flip flops and vegetables immediately spring to mind. However, for us, Sustainable or Green Design is about designing meaningful products that truly consider the people they are intended for, and are socially and environmentally considerate.</p>
+                        <p>Our 2018 show at New Designers London presents our individual concepts of Sustainable Product Design. As Victor Papanek said “Design, if it is to be ecologically responsible and socially responsive, must be revolutionary and radical.”</p>
                     </div>
                 </div>
             </div>
