--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@ layout: default
                             <h2>Jayden Newman - Allay</h2>
                             <span class="close close_multi">&times;</span>
                             <a data-flickr-embed="true"  href="https://www.flickr.com/photos/164885855@N07/41589823995/in/dateposted-public/" title="Jayden_9"><img src="https://farm1.staticflickr.com/878/41589823995_7aa6395f18_b.jpg" width="1024" height="683" alt="Jayden_9" class="product"></a>
-                            <p>About text</p>
+                            <p>Nature and gardening can hugely benefit human health and well-being and improve social skills, as well as having an extremely positive impact on people with disabilities. Allay is a small hand gardening tool attachment that presents a new grip, providing the option to hold the tool in different positions, as well as absorbing any unexpected shock experienced from impact with harder debris. This new grip promotes healthy wrist positioning throughout different gardening tasks and allows the user to confidently adapt to different gardening environments, such as raised flower beds. With this product being aimed more at elderly consumers, its purpose is to be used with existing tools, with consideration towards the user already owning a collection of gardening tools. They may find these existing tools more difficult to use now due to low dexterity, and having to replace them all would be an expensive option.</p>
                         </div>
                     </div>
                     
