--- a/who.html
+++ b/who.html
@@ -12,7 +12,11 @@ layout: default
                 </div>
                 <div class="row">
                     <div class="nine columns">
-                        <p>We are a collection of 21 third year students from Falmouth University’s Sustainable Product Design course. We are coming to the end of our studies at university and are showing our project at New Designers 2018.</p> 
+                        <h2>it's not easy being green?</h2>
+                        <p>'It's not easy being green' is an exhibition by 21 graduates from Sustainable Product Design that responds to the pertinent social, environmental and ethical issues affecting the world and society.</p>    
+                        <p>Amidst growing concerns of climate change, a growing population and scarce resources, the responsibility of the designer has become amplified. It has become apparent that the sustainable implications of a product must be considered.</p> 
+                        <p>But what does it mean to be “green”? Earth domes, flip flops and vegetables immediately spring to mind. However, for us, Sustainable or Green Design is about designing meaningful products that truly consider the people they are intended for, and are socially and environmentally considerate.</p>
+                        <p>Our 2018 show at New Designers London presents our individual concepts of Sustainable Product Design. As Victor Papanek said “Design, if it is to be ecologically responsible and socially responsive, must be revolutionary and radical.”</p> 
                         <p>Take a look at all our New Designers and find out by looking at their profiles.</p>
                     </div>
                 </div>
