--- a/profiles/elliot.html
+++ b/profiles/elliot.html
@@ -13,7 +13,7 @@ layout: default
                         <hr>
                             <div class="profileContact">
                             <p class="profileLinks"><nobr>Find me at:</nobr></p>
-                            <p class="profileLinks" ><nobr>elliotlunn@design.co.uk</nobr><p>
+                            <p class="profileLinks" ><nobr>design@elliotlunn.co.uk</nobr><p>
                             <p class="profileLinks"><a href="http://elliotlunn.co.uk/"><nobr>My Web Page</nobr></a></p>
                             <div class="profileLinks">
                                                             
