--- a/projects.html
+++ b/projects.html
@@ -239,7 +239,7 @@ layout: default
                     </div>
                     <div class="modal modal_multi">
                         <div class="modal-content">
-                            <h2>Beni Leung - Lumba </h2>
+                            <h2>Beni Leung - Lumba</h2>
                             <span class="close close_multi">&times;</span>
                             <a data-flickr-embed="true"  href="https://www.flickr.com/photos/164885855@N07/28067772017/" title="Beni New1( Main)"><img src="https://farm2.staticflickr.com/1807/28067772017_0b3795bb60_k.jpg" width="1448" height="2048" alt="Beni New1( Main)" class="product"></a>
                             <p>Lumba is a bag design that considers ergonomics and aesthetics, transferring the weight from the bag to the lumbar area in order to reduce the pressure on the shoulders. The waistband component keeps the bag close to the user’s body for greater support.</p>
@@ -395,7 +395,7 @@ layout: default
                             </div>
                                 
                             <div class="project myBtn_multi" id="box">
-                                <div class="img25"><h1>Beni Leung - Bag</h1></div>
+                                <div class="img25"><h1>Beni Leung - Lumba</h1></div>
                             </div>
                                 
                             <div class="project myBtn_multi" id="box">
